# yieldrep

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
docs/: methodology.md
reports/: classical_baseline_summary.md
src/yieldrep/: __init__.py  cli.py  config.py
src/yieldrep/data/: __init__.py  ingest.py  macro_indicators.py  market_indicators.py  normalize.py  policy_rates.py  schema.py
src/yieldrep/evaluation/: __init__.py  cross_market.py  datasets.py  diagnostics.py  metrics.py  reconstruction.py  reports.py  residual_rv.py  splits.py  targets.py
src/yieldrep/factors/: carry.py  curve.py  nelson_siegel.py  pca.py  policy.py  residual.py
src/yieldrep/features/: __init__.py  curve.py  nelson_siegel.py  pca.py  targets.py
src/yieldrep/models/: __init__.py  baselines.py  forecasting.py
src/yieldrep/visualization/: __init__.py  plotly_baselines.py  plotly_cross_market.py  plotly_curve_state.py  plotly_curves.py  plotly_nelson_siegel.py  plotly_pca.py  plotly_reconstruction.py  plotly_residual_rv.py
tests/: test_baselines.py  test_build_curves.py  test_carry.py  test_cli.py  test_config.py  test_curve_features.py  test_diagnostics.py  test_evaluation_datasets.py  test_ingest.py  test_macro_indicators.py  test_market_indicators.py  test_metrics.py  test_nelson_siegel.py  test_normalize.py  test_pca.py  test_plotly_baselines.py  test_plotly_curves.py  test_plotly_nelson_siegel.py  test_plotly_pca.py  test_policy_rates.py  test_reconstruction.py  test_reports.py  test_residual_features.py  test_schema.py  test_sources.py  test_targets.py
(+4 files in other folders)
